@@ -1,5 +1,14 @@
 2006-04-20  David Reveman  <davidr@novell.com>
 
+	* plugins/resize.c: Changed default binding to Button2.
+
+	* src/display.c (LOWER_WINDOW_BUTTON_DEFAULT): Button2 -> 6.
+
+	* gnome/window-decorator/gnome-window-decorator.c:
+	* include/compiz.h:
+	* src/event.c (handleEvent):
+	* src/display.c: Add window menu binding.
+
 	* gnome/window-decorator/gnome-window-decorator.c: Pick up toolkit
 	actions from compiz and send gnome panel actions for "main menu" and
 	"run dialog" actions.
